# test-automation-hermes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/hermes/: __init__.py  hermes_plugin.py
src/hermes/_android/: android_adb.py  android_component.py  android_device.py  android_driver.py  selector_paser.py  selector_to_jsonpath.py  selector_to_xpath.py
src/hermes/_core/: __init__.py  config.py  context.py  hermes_cache.py  portal_protocol.py  step.py
src/hermes/_media/: image_calc.py  image_component.py  video_calc.py
src/hermes/_plugins/: case_listener.py  device_linstener.py  hermes_listener.py
src/hermes/_protocol/: ai_protocol.py  component_protocol.py  debug_bridge_protocol.py  device_protocol.py  driver_protocol.py
src/hermes/models/: ai.py  common.py  component.py  device.py  language.py  logcat.py  media.py  plugin.py  selector.py
src/hermes/protocol/: ai_protocol.py  component_protocol.py  debug_bridge_protocol.py  device_protocol.py  driver_protocol.py  selector_to_path_protocol.py
src/hermes/utils/: tools.py
tests/: check.xml  test_android_component.py  test_android_device.py  test_android_driver.py  test_android_selector_parser.py  test_app_uri.py  test_hermes_step.py  test_server.py  test_similarity_comparison.py  test_template_matching.py  test_video_matching.py
